# secret-transfer

./: .editorconfig  .gitignore  LICENSE  README.md  Taskfile.yaml  package-lock.json  package.json  pyproject.toml
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr-title.yaml  check-pr.yaml  release.yaml
.husky/: commit-msg  pre-commit
examples/: README.md
examples/advanced/import_local_files/: README.md  custom_file.py  secrets.yaml
examples/basic/lockbox_to_github/: README.md  secrets.yaml
examples/basic/lockbox_to_python_app/: README.md  Taskfile.yaml  main.py  secrets.yaml
examples/basic/vault_to_terminal/: README.md  Taskfile.yaml  secrets.yaml
examples/extentions/import_local_files/: Taskfile.yaml  custom_file.py  secrets.yaml
secret_transfer/: __init__.py  __main__.py  cli.py  context.py
secret_transfer/app/: __init__.py  application.py  settings.py
secret_transfer/core/: __init__.py  types.py
secret_transfer/core/base/: __init__.py  base.py  proxy.py  registry.py
secret_transfer/core/collection/: __init__.py  base.py  proxy.py
secret_transfer/core/destination/: __init__.py  base.py  proxy.py
secret_transfer/core/source/: __init__.py  base.py  proxy.py
secret_transfer/core/transfer/: __init__.py  base.py  proxy.py
secret_transfer/default/: __init__.py
secret_transfer/default/collection/: __init__.py  default.py
secret_transfer/default/destination/: __init__.py  bash_export.py  env.py  gh_cli_secrets.py
secret_transfer/default/source/: __init__.py  dot_env.py  env.py  preset.py  user_input.py  vault_cli_kv.py  yc_cli_lockbox.py
secret_transfer/default/transfer/: __init__.py  default.py
secret_transfer/protocol/: __init__.py  base.py  collection.py  destination.py  source.py  transfer.py
secret_transfer/utils/: types.py
secret_transfer/utils/cli/: __init__.py  base.py  gh.py  vault.py  yc.py
tests/e2e/cli/: common.py  (+4 more)
tests/utils/: __init__.py  types.py
(+43 files in other folders)
